--- a/app/src/main/res/layout/time_access_pin_dialog_fragment.xml
+++ b/app/src/main/res/layout/time_access_pin_dialog_fragment.xml
@@ -40,89 +40,99 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView_title" />
 
-        <RadioGroup
-            android:id="@+id/radioGroup_options"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/large_padding"
-            android:paddingEnd="0dp"
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="340dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_title_separator">
+            app:layout_constraintTop_toBottomOf="@+id/textView_title">
 
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radioButton_immediately"
-                style="@style/BodyTextView"
+            <RadioGroup
+                android:id="@+id/radioGroup_options"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="@dimen/x_large_padding"
+                android:paddingStart="@dimen/large_padding"
                 android:paddingEnd="0dp"
-                android:text="@string/text_immediately" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/view_title_separator">
 
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radioButton_ten_seconds"
-                style="@style/BodyTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/x_large_padding"
-                android:paddingEnd="0dp"
-                android:text="@string/text_ten_seconds" />
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/radioButton_immediately"
+                    style="@style/BodyTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/x_large_padding"
+                    android:paddingEnd="0dp"
+                    android:text="@string/text_immediately" />
 
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radioButton_thirty_seconds"
-                style="@style/BodyTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/x_large_padding"
-                android:paddingEnd="0dp"
-                android:text="@string/text_thirty_seconds" />
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/radioButton_ten_seconds"
+                    style="@style/BodyTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/x_large_padding"
+                    android:paddingEnd="0dp"
+                    android:text="@string/text_ten_seconds" />
 
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radioButton_one_minute"
-                style="@style/BodyTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/x_large_padding"
-                android:paddingEnd="0dp"
-                android:text="@string/text_one_minute" />
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/radioButton_thirty_seconds"
+                    style="@style/BodyTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/x_large_padding"
+                    android:paddingEnd="0dp"
+                    android:text="@string/text_thirty_seconds" />
 
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radioButton_five_minutes"
-                style="@style/BodyTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/x_large_padding"
-                android:paddingEnd="0dp"
-                android:text="@string/text_five_minutes" />
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/radioButton_one_minute"
+                    style="@style/BodyTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/x_large_padding"
+                    android:paddingEnd="0dp"
+                    android:text="@string/text_one_minute" />
 
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radioButton_one_hour"
-                style="@style/BodyTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/x_large_padding"
-                android:paddingEnd="0dp"
-                android:text="@string/text_one_hour" />
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/radioButton_five_minutes"
+                    style="@style/BodyTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/x_large_padding"
+                    android:paddingEnd="0dp"
+                    android:text="@string/text_five_minutes" />
 
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radioButton_one_day"
-                style="@style/BodyTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/x_large_padding"
-                android:paddingEnd="0dp"
-                android:text="@string/text_one_day" />
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/radioButton_one_hour"
+                    style="@style/BodyTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/x_large_padding"
+                    android:paddingEnd="0dp"
+                    android:text="@string/text_one_hour" />
 
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/radioButton_never"
-                style="@style/BodyTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/x_large_padding"
-                android:paddingEnd="0dp"
-                android:text="@string/text_never" />
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/radioButton_one_day"
+                    style="@style/BodyTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/x_large_padding"
+                    android:paddingEnd="0dp"
+                    android:text="@string/text_one_day" />
 
-        </RadioGroup>
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/radioButton_never"
+                    style="@style/BodyTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/x_large_padding"
+                    android:paddingEnd="0dp"
+                    android:text="@string/text_never" />
+
+            </RadioGroup>
+
+        </ScrollView>
 
         <View
             android:id="@+id/view_radio_group_separator"
@@ -131,7 +141,7 @@
             android:background="@color/separator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/radioGroup_options" />
+            app:layout_constraintTop_toBottomOf="@id/scrollView" />
 
         <TextView
             android:id="@+id/textView_info"
