--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorSecondaryDark">#505564</color>
     <color name="primaryTextColor">#F2F2F2</color>
     <color name="secondaryTextColor">#F2F2F2</color>
-    <color name="textColorTimeAndMessage">#4d4d4d</color>
+    <color name="textColorDrawerAndStatus">#4d4d4d</color>
     <color name="secondaryTextColorForAll">#4d4d4d</color>
     <color name="linkTextColor">#29ABE2</color>
     <color name="white">#f2f2f2</color>
