--- a/app/src/main/res/values-es/contact_profile.xml
+++ b/app/src/main/res/values-es/contact_profile.xml
@@ -9,4 +9,5 @@
     <string name="text_name_not_contain_enough_char">El nombre debe contener mínimo 5 caracteres.</string>
     <string name="text_name_invalid">Nombre no válido</string>
     <string name="text_nickname_invalid">Apodo no válido</string>
+    <string name="text_change_contact_photo">Cambiar foto de contacto</string>
 </resources>
