--- a/app/src/main/res/values-pt/contact_profile.xml
+++ b/app/src/main/res/values-pt/contact_profile.xml
@@ -9,4 +9,5 @@
     <string name="text_name_not_contain_enough_char">O nome deve conter pelo menos 5 caracteres.</string>
     <string name="text_name_invalid">Nome inválido</string>
     <string name="text_nickname_invalid">Apelido inválido</string>
+    <string name="text_change_contact_photo">Change contact photo</string>
 </resources>
