--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -52,6 +52,7 @@
 
     <!--//Background-->
     <attr name="attrBackgroundColorPrimary" format="reference" />
+    <attr name="attrBackgroundColorPrimary50" format="reference" />
     <attr name="attrBackgroundSectionColor" format="reference" />
     <attr name="attrBackgroundSectionOtherColor" format="reference" />
     <attr name="attrBackgroundColorBackground" format="reference" />
