--- a/app/src/main/res/layout/add_contact_fragment.xml
+++ b/app/src/main/res/layout/add_contact_fragment.xml
@@ -48,7 +48,7 @@
                             android:layout_height="match_parent"
                             custom:description="@string/text_empty_state_friendship_description"
                             custom:image="@drawable/image_empty_state_friendship"
-                            custom:title="@string/text_empty_state_friendship_title"/>
+                            custom:titleEmptyState="@string/text_empty_state_friendship_title"/>
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/recyclerView_friendship_request"
@@ -75,7 +75,7 @@
                         android:layout_height="match_parent"
                         custom:description="@string/text_empty_state_search_description"
                         custom:image="@drawable/image_empty_state_search"
-                        custom:title="@string/text_empty_state_search_title"/>
+                        custom:titleEmptyState="@string/text_empty_state_search_title"/>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerView_contacts"
