--- a/app/src/main/res/layout/blocked_contacts_fragment.xml
+++ b/app/src/main/res/layout/blocked_contacts_fragment.xml
@@ -107,7 +107,7 @@
                 android:layout_height="match_parent"
                 custom:description="@string/text_empty_state_blocked_contacts_description"
                 custom:image="@drawable/image_empty_state_blocked_contacts"
-                custom:title="@string/text_empty_state_blocked_contacts_title" />
+                custom:titleEmptyState="@string/text_empty_state_blocked_contacts_title" />
 
         </ViewSwitcher>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
