--- a/app/src/main/res/layout/contacts_fragment.xml
+++ b/app/src/main/res/layout/contacts_fragment.xml
@@ -77,7 +77,7 @@
                         android:layout_height="match_parent"
                         custom:description="@string/text_empty_state_contacts_description"
                         custom:image="@drawable/image_empty_state_friendship"
-                        custom:title="@string/text_empty_state_contacts_title"/>
+                        custom:titleEmptyState="@string/text_empty_state_contacts_title"/>
 
                 </ViewSwitcher>
 
