--- a/app/src/main/res/layout/register_recovery_account_question_item.xml
+++ b/app/src/main/res/layout/register_recovery_account_question_item.xml
@@ -2,6 +2,7 @@
 <com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/textView_question_item"
+    style="@style/BodyTextView"
     android:layout_width="match_parent"
     android:layout_height="44dp"
     android:gravity="center_vertical"
