--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -172,7 +172,7 @@
 
     <declare-styleable name="EmptyStateCustomView">
         <attr name="image" format="reference" />
-        <attr name="title" format="string" />
+        <attr name="titleEmptyState" format="string" />
         <attr name="description" format="string" />
     </declare-styleable>
 </resources>
