--- a/app/src/main/res/layout/attachment_location_fragment.xml
+++ b/app/src/main/res/layout/attachment_location_fragment.xml
@@ -41,7 +41,7 @@
             <ImageView
                 android:id="@+id/imageView_marker"
                 android:layout_width="wrap_content"
-                android:layout_height="47dp"
+                android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
