--- a/app/src/main/res/values-fr/profile.xml
+++ b/app/src/main/res/values-fr/profile.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="explanation_camera_and_storage_permission">Pour pouvoir modifier le profil et la photo de couverture, permettez à NapoleoN d\'accéder à votre appareil photo, à vos photos et au contenu multimédia de votre appareil.</string>
+    <string name="text_profile_photo">Photo de profil</string>
+    <string name="text_cover_photo">Photo de profil</string>
+    <string name="text_message_restore_cover_photo">Voulez-vous vraiment restaurer l\'image de couverture par défaut?</string>
+    <string name="text_message_restore_profile_photo">Etes-vous sûr de vouloir réinitialiser l\'image de profil par défaut?</string>
 </resources>
