--- a/app/src/main/res/layout/change_fakes_dialog_fragment.xml
+++ b/app/src/main/res/layout/change_fakes_dialog_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -26,10 +26,10 @@
             android:gravity="center_vertical"
             android:paddingStart="@dimen/large_padding"
             android:paddingEnd="0dp"
-            tools:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Name" />
 
         <View
             android:id="@+id/view_title_separator"
@@ -45,8 +45,8 @@
             style="@style/TextInputLayoutOutlined"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/small_margin"
             android:layout_marginStart="@dimen/small_margin"
+            android:layout_marginTop="@dimen/small_margin"
             android:layout_marginEnd="@dimen/small_margin"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,12 +58,13 @@
                 android:id="@+id/editText_display"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapWords"
+                android:digits="@string/only_letters_and_numbers"
+                android:inputType="text"
                 android:lines="1"
-                android:textColor="?attr/attrTextColorHint"
                 android:maxLength="@dimen/max_length_display_name"
                 android:maxLines="1"
                 android:singleLine="true"
+                android:textColor="?attr/attrTextColorHint"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/view_title_separator" />
