--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -65,8 +65,8 @@
                         android:layout_marginBottom="@dimen/normal_margin"
                         android:background="@drawable/bg_profile_avatar"
                         android:scaleType="centerInside"
-                        app:avatarUser="@{viewModel.user}"
                         android:transitionName="transition_image_preview"
+                        app:avatarUser="@{viewModel.user}"
                         app:layout_constraintBottom_toTopOf="@+id/textView_user_name"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -225,6 +225,7 @@
                         android:maxLength="@dimen/max_length_display_name"
                         android:padding="0dp"
                         android:singleLine="true"
+                        android:textColor="?attr/attrColorButtonTint"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@id/textView_label_name"
                         app:layout_constraintStart_toStartOf="@id/textView_label_name"
@@ -302,6 +303,7 @@
                         android:padding="0dp"
                         android:singleLine="true"
                         android:text="@{viewModel.user.status}"
+                        android:textColor="?attr/attrColorButtonTint"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@id/textView_label_status"
                         app:layout_constraintStart_toStartOf="@id/textView_label_status"
