--- a/app/src/main/res/values-de/profile.xml
+++ b/app/src/main/res/values-de/profile.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="explanation_camera_and_storage_permission">Ermöglichen Sie NapoleoN den Zugriff auf Ihre Kamera, Fotos und Multimedia-Inhalte Ihres Geräts, um das Profil und das Titelbild zu ändern.</string>
+    <string name="text_profile_photo">Bild</string>
+    <string name="text_cover_photo">Titelbild</string>
+    <string name="text_message_restore_cover_photo">Möchten Sie das Standard-Titelbild wirklich wiederherstellen?</string>
+    <string name="text_message_restore_profile_photo">Sind Sie sicher, dass Sie das Standard-Profilbild zurücksetzen?</string>
 </resources>
