--- a/app/src/main/res/layout/blocked_contacts_fragment.xml
+++ b/app/src/main/res/layout/blocked_contacts_fragment.xml
@@ -17,90 +17,12 @@
         android:layout_height="match_parent"
         tools:context=".ui.blockedContacts.BlockedContactsFragment">
 
-        <ViewSwitcher
-            android:id="@+id/viewSwitcher"
+        <ViewFlipper
+            android:id="@+id/viewFlipper"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ViewSwitcher
-                android:id="@+id/viewSwitcher_recycler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/container_recyclerView_blocked_contacts"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/textView_info"
-                        style="@style/SmallBodyTextView"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/text_blocked_contacts_info"
-                        app:layout_constraintEnd_toEndOf="@id/guideline_end"
-                        app:layout_constraintStart_toStartOf="@id/guideline_start"
-                        app:layout_constraintTop_toTopOf="@id/guideline_top" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView_blocked_contacts"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_marginTop="@dimen/normal_margin"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/textView_info"
-                        tools:listitem="@layout/blocked_contacts_item" />
-
-                    <androidx.constraintlayout.widget.Guideline
-                        android:id="@+id/guideline_start"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        app:layout_constraintGuide_begin="@dimen/normal_margin" />
-
-                    <androidx.constraintlayout.widget.Guideline
-                        android:id="@+id/guideline_top"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        app:layout_constraintGuide_begin="@dimen/normal_margin" />
-
-                    <androidx.constraintlayout.widget.Guideline
-                        android:id="@+id/guideline_end"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        app:layout_constraintGuide_end="@dimen/normal_margin" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/container_search_not_found"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/textView_search_not_found"
-                        style="@style/TextViewSecondaryTitle"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:paddingStart="@dimen/normal_padding"
-                        android:paddingEnd="@dimen/normal_padding"
-                        android:text="@string/text_blocked_contact_not_found"
-                        android:textAlignment="center"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </ViewSwitcher>
-
+            <!-- EMPTY STATE -->
             <com.naposystems.pepito.ui.custom.emptyState.EmptyStateCustomView
                 android:id="@+id/empty_state"
                 android:layout_width="match_parent"
@@ -109,6 +31,80 @@
                 custom:image="@drawable/image_empty_state_blocked_contacts"
                 custom:titleEmptyState="@string/text_empty_state_blocked_contacts_title" />
 
-        </ViewSwitcher>
+            <!-- RECYCLERVIEW -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/container_recyclerView_blocked_contacts"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView_info"
+                    style="@style/SmallBodyTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_blocked_contacts_info"
+                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
+                    app:layout_constraintStart_toStartOf="@id/guideline_start"
+                    app:layout_constraintTop_toTopOf="@id/guideline_top" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_blocked_contacts"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/normal_margin"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textView_info"
+                    tools:listitem="@layout/blocked_contacts_item" />
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline_start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_begin="@dimen/normal_margin" />
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline_top"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_begin="@dimen/normal_margin" />
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline_end"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_end="@dimen/normal_margin" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <!-- SEARCH NOT FOUND -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/container_search_not_found"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView_search_not_found"
+                    style="@style/TextViewSecondaryTitle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/normal_padding"
+                    android:paddingEnd="@dimen/normal_padding"
+                    android:text="@string/text_blocked_contact_not_found"
+                    android:textAlignment="center"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ViewFlipper>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
