--- a/app/src/main/res/values-it/status.xml
+++ b/app/src/main/res/values-it/status.xml
@@ -11,4 +11,5 @@
     <string name="text_status_only_emergency">Solo emergenza</string>
     <string name="text_error_getting_local_status">Si è verificato un errore durante il recupero degli stati, riprovare</string>
     <string name="text_delete_status">Elimina stato</string>
+    <string name="text_status_updated_successfully">Stato aggiornato correttamente</string>
 </resources>
