--- a/app/src/main/res/values-pt/status.xml
+++ b/app/src/main/res/values-pt/status.xml
@@ -11,5 +11,6 @@
     <string name="text_status_only_emergency">Apenas emergência</string>
     <string name="text_error_getting_local_status">Ocorreu um erro ao obter os estados, tente novamente</string>
     <string name="text_delete_status">Eliminar estado</string>
+    <string name="text_status_updated_successfully">Status atualizado com sucesso</string>
 
 </resources>
