--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -530,23 +530,23 @@
         tools:layout="@layout/conversation_camera_fragment">
         <argument
             android:name="userId"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
         <argument
             android:name="contactId"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
         <action
             android:id="@+id/action_conversationCameraFragment_to_attachmentPreviewFragment"
             app:destination="@id/attachmentPreviewFragment" />
         <argument
             android:name="quote"
-            app:argType="string"
-            android:defaultValue='""' />
+            android:defaultValue='""'
+            app:argType="string" />
         <argument
             android:name="location"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/contactProfileFragment"
@@ -580,20 +580,20 @@
         tools:layout="@layout/attachment_gallery_folders_fragment">
         <argument
             android:name="contact"
+            android:defaultValue="@null"
             app:argType="com.naposystems.pepito.entity.Contact"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
         <action
             android:id="@+id/action_attachmentGalleryFragment_to_attachmentGalleryFragment"
             app:destination="@id/attachmentGalleryFragment" />
         <argument
             android:name="quoteWebId"
-            app:argType="string"
-            android:defaultValue='""' />
+            android:defaultValue='""'
+            app:argType="string" />
         <argument
             android:name="location"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/attachmentGalleryFragment"
@@ -602,9 +602,9 @@
         tools:layout="@layout/attachment_gallery_fragment">
         <argument
             android:name="contact"
+            android:defaultValue="@null"
             app:argType="com.naposystems.pepito.entity.Contact"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
         <argument
             android:name="galleryFolder"
             app:argType="com.naposystems.pepito.model.attachment.gallery.GalleryFolder" />
@@ -613,12 +613,12 @@
             app:destination="@id/attachmentPreviewFragment" />
         <argument
             android:name="quoteWebId"
-            app:argType="string"
-            android:defaultValue='""' />
+            android:defaultValue='""'
+            app:argType="string" />
         <argument
             android:name="location"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/attachmentPreviewFragment"
@@ -636,8 +636,8 @@
             app:argType="integer" />
         <argument
             android:name="quote"
-            app:argType="string"
-            android:defaultValue='""' />
+            android:defaultValue='""'
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/validatePasswordPreviousRecoveryAccountFragment"
@@ -688,7 +688,7 @@
         android:id="@+id/subscriptionPaymentFragment"
         android:name="com.naposystems.pepito.ui.subscriptionPayment.SubscriptionPaymentFragment"
         android:label="@string/text_subscription_title"
-        tools:layout="@layout/subscription_payment_fragment" >
+        tools:layout="@layout/subscription_payment_fragment">
         <argument
             android:name="url"
             app:argType="string" />
@@ -710,26 +710,26 @@
     <fragment
         android:id="@+id/attachmentLocationFragment"
         android:name="com.naposystems.pepito.ui.attachmentLocation.AttachmentLocationFragment"
-        tools:layout="@layout/attachment_location_fragment"
-        android:label="AttachmentLocationFragment" />
+        android:label="@string/text_location"
+        tools:layout="@layout/attachment_location_fragment" />
     <fragment
         android:id="@+id/previewImageFragment"
         android:name="com.naposystems.pepito.ui.previewImage.PreviewImageFragment"
         android:label="@string/text_profile_title"
-        tools:layout="@layout/preview_image_fragment" >
+        tools:layout="@layout/preview_image_fragment">
         <argument
             android:name="contact"
+            android:defaultValue="@null"
             app:argType="com.naposystems.pepito.entity.Contact"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
         <argument
             android:name="titleToolbar"
             app:argType="string"
             app:nullable="true" />
         <argument
             android:name="user"
+            android:defaultValue="@null"
             app:argType="com.naposystems.pepito.entity.User"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
     </fragment>
 </navigation>
