--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,7 @@
     <dimen name="small_radius">8dp</dimen>
     <dimen name="minor_radius">4dp</dimen>
     <dimen name="x_x_small_padding">2dp</dimen>
+    <dimen name="x_x_small_margin">2dp</dimen>
     <dimen name="text_size_audio_duration">12sp</dimen>
     <dimen name="text_size_call_title">20sp</dimen>
     <dimen name="circle_progress_bar">4dp</dimen>
